--- a/pages/ui-button.html
+++ b/pages/ui-button.html
@@ -1,6 +1,6 @@
 <section class="intro">
   <span class="title">Кнопка</span>
-  <span class="description">Компонент, который может выступать в роли ссылки или запускать действие.</span>
+  <span class="description">Компонент, который запускает действие.</span>
   <ul>
     <li>Поддерживает LTR и RTL.</li>
     <li>Для создания кнопки требуется хотя бы один из атрибутов: label, icon-leading, icon-trailing.</li>
