--- a/pages/ui-button.html
+++ b/pages/ui-button.html
@@ -6,10 +6,11 @@
     <li>Для создания кнопки требуется хотя бы один из атрибутов: label, icon-leading, icon-trailing.</li>
     <li>Для создания кнопки с одной иконкой, можно использовать icon-leading или icon-trailing.</li>
     <li>label - реактивный, необязательный атрибут. Текст кнопки, непрерывная строка.</li>
-    <li>icon-leading и icon-trailing — реактивные, необязательные атрибуты. Определяют имена иконок, отображаемых соответственно до и после текста.</li>
+    <li>icon-leading и icon-trailing - реактивные, необязательные атрибуты. Определяют имена иконок, отображаемых соответственно до и после текста.</li>
     <li>height - статичный, необязательный атрибут. Высота кнопки (число), по умолчанию - 32, измеряется в пикселях. (рекомендуется от 24 до 40). Лучше использовать чётные числа.</li>
     <li>disabled - реактивный, необязательный атрибут, управляющий состоянием компонента (отключён/включён).</li>
-    <li>Размер шрифта изменяется автоматически: он рассчитывается по формуле "высота кнопки / 2", но не менее 12px и не более 18px.</li>
+    <li>Размер шрифта рассчитывается по формуле "высота кнопки / 2", но не менее 12px и не более 18px.</li>
+    <li>Закругление углов рассчитывается по формуле "высота кнопки / 4".</li>
   </ul>
 </section>
 
