--- a/pages/ui-input.html
+++ b/pages/ui-input.html
@@ -9,7 +9,7 @@
     <li>height - статичный, необязательный атрибут. Высота поля (число), по умолчанию - 32, измеряется в пикселях. (рекомендуется от 24 до 40). Лучше использовать чётные числа.</li>
     <li>Размер шрифта изменяется автоматически, рассчитывается по формуле "выcота кнопки / 2"</li>
     <li>disabled - реактивный, необязательный атрибут, управляющий состоянием компонента (отключён/включён).</li>
-    <li>required — статичный, необязательный атрибут, управляющий состоянием компонента (обязательное или необязательное заполнение).</li>
+    <li>required - статичный, необязательный атрибут, управляющий состоянием компонента (обязательное или необязательное заполнение).</li>
   </ul>
 </section>
 
