--- a/index.html
+++ b/index.html
@@ -15,47 +15,62 @@
   <nav>
     <div class="static"></div>
     <div class="dynamic">
-
+<!-- variant, tone, elevation, radius -->
       <div class="menuCategory">
-        <div class="menuTitle">Тема</div>
+        <div class="menuTitle">Theme</div>
 
         <div class="menuItem">
           <span onclick="navigate('icons')" data-page="icons">
-           Каталог иконок
+            Icons
           </span>
         </div>
 
       </div>
-
+<!-- stack, grid, container, section, split -->
       <div class="menuCategory">
-        <div class="menuTitle">Компоненты</div>
+        <div class="menuTitle">Layout</div>
+
+      </div>
+<!-- divider, icon, line, spacer, text -->
+      <div class="menuCategory">
+        <div class="menuTitle">Primitives</div>
 
         <div class="menuItem">
           <span onclick="navigate('ui-icon')" data-page="ui-icon">
-            Иконка
+            Icon
           </span>
         </div>
 
         <div class="menuItem">
           <span onclick="navigate('ui-divider')" data-page="ui-divider">
-            Разделитель
+            Divider
           </span>
         </div>
 
+      </div>
+<!-- button, input, select, modal, tooltip -->
+      <div class="menuCategory">
+        <div class="menuTitle">Components</div>
+
         <div class="menuItem">
           <span onclick="navigate('ui-button')" data-page="ui-button">
-            Кнопка
+            Button
           </span>
         </div>
 
         <div class="menuItem">
           <span onclick="navigate('ui-input')" data-page="ui-input">
-            Поле ввода
+            Input
           </span>
         </div>
 
       </div>
+<!-- portal, observer, resize-handler, mount-detector -->
+      <div class="menuCategory">
+        <div class="menuTitle">Utilities</div>
 
+      </div>
+<!---->
     </div>
     <div class="static"></div>
   </nav>
