--- a/pages/icons.html
+++ b/pages/icons.html
@@ -1,14 +1,14 @@
 <section class="intro">
-  <span class="title">Каталог иконок</span>
-  <span class="description">Коллекция иконок.</span>
+  <span class="title">Icons</span>
+  <span class="description">A collection of icons.</span>
   <ul>
-    <li>Толщина линии: 2px.</li>
-    <li>Закругление угла: 2px.</li>
+    <li>Line thickness: 2px.</li>
+    <li>Corner radius: 2px.</li>
   </ul>
 </section>
 
 <section class="content">
-  <span>Размер: 20 x 20</span>
+  <span>Size: 20 x 20</span>
   <div class="icons">
     <ui-icon icon="home"></ui-icon>
     <ui-icon icon="article"></ui-icon>
@@ -20,7 +20,7 @@
   </div>
 </section>
 
-<ui-button onclick="changeIconName()" label="Тест реактивности"></ui-button>
+<ui-button onclick="changeIconName()" label="Reactivity Test"></ui-button>
 
 <script>
   function changeIconAttribute(attribute, values){
