--- a/pages/ui-divider.html
+++ b/pages/ui-divider.html
@@ -1,18 +1,18 @@
 <section class="intro">
-  <span class="title">Разделитель</span>
-  <span class="description">Компонент для разделения контента с помощью линии или линии с текстом.</span>
+  <span class="title">Divider</span>
+  <span class="description">A component for separating content using a line or a line with text.</span>
   <ul>
-    <li>Поддерживает LTR и RTL.</li>
-    <li>label - необязательный атрибут, непрерывная строка.</li>
-    <li>axis - "x" или "y" (строчные), определяет ось. По умолчанию - x.</li>
-    <li>axis="x" - горизонтальный разделитель, ширина 100%.</li>
-    <li>axis="y" - вертикальный разделитель, высота 100%.</li>
-    <li>text-align - выравнивание текста: "start" и "end". По умолчанию - по центру.</li>
+    <li>Supports LTR and RTL.</li>
+    <li>label - optional attribute, a continuous string.</li>
+    <li>axis - "x" or "y" (lowercase), defines the axis. Default is "x".</li>
+    <li>axis="x" - horizontal divider, 100% width.</li>
+    <li>axis="y" - vertical divider, 100% height.</li>
+    <li>text-align - text alignment: "start" or "end". Center by default.</li>
   </ul>
 </section>
 
 <section class="content">
-  <span>Горизонтальный разделитель. Ширина 100%.</span>
+  <span>Horizontal divider. 100% width.</span>
   <div class="example">
     <div class="preview">
       <ui-divider></ui-divider>
@@ -22,37 +22,37 @@
     </code>
   </div>
 
-  <span>Текст по центру.</span>
+  <span>Label centered.</span>
   <div class="example">
     <div class="preview">
-      <ui-divider label="Текст"></ui-divider>
+      <ui-divider label="Label"></ui-divider>
     </div>
     <code>
-      <span>&lt;ui-divider label="Текст"&gt;&lt;/ui-divider&gt;</span>
+      <span>&lt;ui-divider label="Label"&gt;&lt;/ui-divider&gt;</span>
     </code>
   </div>
 
-  <span>Текст слева.</span>
+  <span>Label aligned left.</span>
   <div class="example">
     <div class="preview">
-      <ui-divider label="Текст" text-align="start"></ui-divider>
+      <ui-divider label="Label" text-align="start"></ui-divider>
     </div>
     <code>
-      <span>&lt;ui-divider label="Текст" text-align="start"&gt;&lt;/ui-divider&gt;</span>
+      <span>&lt;ui-divider label="Label" text-align="start"&gt;&lt;/ui-divider&gt;</span>
     </code>
   </div>
 
-  <span>Текст справа.</span>
+  <span>Label aligned right.</span>
   <div class="example">
     <div class="preview">
-      <ui-divider label="Текст" text-align="end"></ui-divider>
+      <ui-divider label="Label" text-align="end"></ui-divider>
     </div>
     <code>
-      <span>&lt;ui-divider label="Текст" text-align="end"&gt;&lt;/ui-divider&gt;</span>
+      <span>&lt;ui-divider label="Label" text-align="end"&gt;&lt;/ui-divider&gt;</span>
     </code>
   </div>
 
-  <span>Вертикальный разделитель. Высота 100%.</span>
+  <span>Vertical divider. 100% height.</span>
   <div class="example">
     <div class="preview" style="height:150px;">
       <ui-divider axis="y"></ui-divider>
@@ -62,33 +62,33 @@
     </code>
   </div>
 
-  <span>Текст по центру.</span>
+  <span>Label centered.</span>
   <div class="example">
     <div class="preview" style="height:150px;">
-      <ui-divider label="Текст" axis="y"></ui-divider>
+      <ui-divider label="Label" axis="y"></ui-divider>
     </div>
     <code>
-      <span>&lt;ui-divider label="Текст" axis="y"&gt;&lt;/ui-divider&gt;</span>
+      <span>&lt;ui-divider label="Label" axis="y"&gt;&lt;/ui-divider&gt;</span>
     </code>
   </div>
 
-  <span>Текст сверху.</span>
+  <span>Label at the top.</span>
   <div class="example">
     <div class="preview" style="height:150px;">
-      <ui-divider label="Текст" axis="y" text-align="start"></ui-divider>
+      <ui-divider label="Label" axis="y" text-align="start"></ui-divider>
     </div>
     <code>
-      <span>&lt;ui-divider label="Текст" axis="y" text-align="start"&gt;&lt;/ui-divider&gt;</span>
+      <span>&lt;ui-divider label="Label" axis="y" text-align="start"&gt;&lt;/ui-divider&gt;</span>
     </code>
   </div>
 
-  <span>Текст снизу.</span>
+  <span>Label at the bottom.</span>
   <div class="example">
     <div class="preview" style="height:150px;">
-      <ui-divider label="Текст" axis="y" text-align="end"></ui-divider>
+      <ui-divider label="Label" axis="y" text-align="end"></ui-divider>
     </div>
     <code>
-      <span>&lt;ui-divider label="Текст" axis="y" text-align="end"&gt;&lt;/ui-divider&gt;</span>
+      <span>&lt;ui-divider label="Label" axis="y" text-align="end"&gt;&lt;/ui-divider&gt;</span>
     </code>
   </div>
 </section>
