--- a/pages/ui-icon.html
+++ b/pages/ui-icon.html
@@ -1,14 +1,14 @@
 <section class="intro">
-  <span class="title">Иконка</span>
-  <span class="description">Компонент для отображения иконки.</span>
+  <span class="title">Icon</span>
+  <span class="description">A component for displaying an icon.</span>
   <ul>
-    <li>icon - реактивный, обязательный атрибут.</li>
-    <li>Цвет svg зависит от цвета шрифта указанного в родительском элементе. (currentColor)</li>
+    <li>icon - required and reactive attribute.</li>
+    <li>The SVG color inherits the font color from the parent element (currentColor).</li>
   </ul>
 </section>
 
 <section class="content">
-  <span>Иконка.</span>
+  <span>Icon.</span>
   <div class="example">
     <div class="preview">
       <ui-icon icon="home"></ui-icon>
