--- a/pages/ui-input.html
+++ b/pages/ui-input.html
@@ -3,13 +3,16 @@
   <div class="description">Поле ввода позволяет пользователю вводить и редактировать текст.</div>
   <ul>
     <li>Поддерживает LTR и RTL.</li>
-    <li>type - тип поля, по умолчанию text</li>
+    <li>type - тип поля, по умолчанию text.</li>
     <li>placeholder - статичный, необязательный атрибут. Текст заглушки.</li>
     <li>icon-leading и icon-trailing — реактивные, необязательные атрибуты. Определяют имена иконок, отображаемых соответственно до и после поля.</li>
     <li>height - статичный, необязательный атрибут. Высота поля (число), по умолчанию - 32, измеряется в пикселях. (рекомендуется от 24 до 40). Лучше использовать чётные числа.</li>
-    <li>Размер шрифта изменяется автоматически, рассчитывается по формуле "выcота кнопки / 2"</li>
+    <li>Размер шрифта изменяется автоматически, рассчитывается по формуле "выcота кнопки / 2".</li>
+    <li>clearable - статичный, необязательный атрибут, добавляет кнопку очистки поля.</li>
     <li>disabled - реактивный, необязательный атрибут, управляющий состоянием компонента (отключён/включён).</li>
     <li>required - статичный, необязательный атрибут, управляющий состоянием компонента (обязательное или необязательное заполнение).</li>
+    <li>Размер шрифта рассчитывается по формуле "высота кнопки / 2 - 2", но не менее 12px и не более 16px.</li>
+    <li>Закругление углов рассчитывается по формуле "высота кнопки / 4".</li>
   </ul>
 </section>
 
@@ -51,6 +54,16 @@
     </div>
     <code>
       &lt;ui-input disabled&gt;&lt;/ui-input&gt;
+    </code>
+  </div>
+
+  <span>Поле с кнопкой очистки.</span>
+  <div class="example">
+    <div class="preview">
+      <ui-input clearable></ui-input>
+    </div>
+    <code>
+      &lt;ui-input clearable&gt;&lt;/ui-input&gt;
     </code>
   </div>
 
