--- a/index.html
+++ b/index.html
@@ -64,6 +64,12 @@
           </span>
         </div>
 
+        <div class="menuItem">
+          <span onclick="navigate('ui-switch')" data-page="ui-switch">
+            Switch
+          </span>
+        </div>
+
       </div>
 <!-- portal, observer, resize-handler, mount-detector -->
       <div class="menuCategory">
