--- a/pages/ui-button.html
+++ b/pages/ui-button.html
@@ -60,7 +60,7 @@
   <span>Disabled button.</span>
   <div class="example">
     <div class="preview">
-      <ui-button id="test" label="Button" disabled></ui-button>
+      <ui-button label="Button" disabled></ui-button>
     </div>
     <code>
       <span>&lt;ui-button label="Button" disabled&gt;&lt;/ui-button&gt;</span>
