--- a/pages/ui-button.html
+++ b/pages/ui-button.html
@@ -88,4 +88,14 @@
       <span>&lt;ui-button icon-leading="gear" icon-trailing="gear" label="Button"&gt;&lt;/ui-button&gt;</span>
     </code>
   </div>
+
+  <span>Text with icons on both sides.</span>
+  <div class="example">
+    <div class="preview">
+      <ui-button style="width:200px" icon-leading="gear" icon-trailing="gear" label="Button" height="60"></ui-button> 
+    </div>
+    <code>
+      <span>&lt;ui-button icon-leading="gear" icon-trailing="gear" label="Button"&gt;&lt;/ui-button&gt;</span>
+    </code>
+  </div>
 </section>
