--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="menuTitle">Theme</div>
 
         <div class="menuItem">
-          <span onclick="navigate('icons')" data-page="icons">
+          <span onclick="navigate('ui-icons')" data-page="ui-icons">
             Icons
           </span>
         </div>
