--- a/pages/ui-button.html
+++ b/pages/ui-button.html
@@ -1,17 +1,27 @@
 <section class="intro">
-  <span class="title">Button</span>
+  <h1>Button</h1>
   <span class="description">A component that triggers an action.</span>
-  <ul>
-    <li>Supports LTR and RTL.</li>
-    <li>To create a button, at least one of the attributes is required: label, icon-leading, icon-trailing.</li>
-    <li>To create a button with a single icon, you can use icon-leading or icon-trailing.</li>
-    <li>label - reactive, optional attribute. Button text, a continuous string.</li>
-    <li>icon-leading and icon-trailing - reactive, optional attributes. Define the icon names displayed before and after the text.</li>
-    <li>height - static, optional attribute. Button height (number), default is 32, measured in pixels. (Recommended: 24 to 40). Even numbers are preferable.</li>
-    <li>disabled - reactive, optional attribute that controls the component's state (enabled/disabled).</li>
-    <li>Font size is calculated as "button height / 2", but no less than 12px and no more than 18px.</li>
-    <li>Corner rounding is calculated as "button height / 4".</li>
-  </ul>
+  <ui-divider></ui-divider>
+  <div class="info">
+    <h3>Features</h3>
+    <ul>
+      <li>Supports LTR and RTL.</li>
+      <li>To create a button, at least one of the attributes is required: label, icon-leading, icon-trailing.</li>
+      <li>To create a button with a single icon, you can use icon-leading or icon-trailing.</li>
+      <li>Font size is calculated as "button height / 2", but no less than 12px and no more than 18px.</li>
+      <li>Corner rounding is calculated as "button height / 4".</li>
+    </ul>
+  </div>
+
+  <div class="info">
+    <h3>Attributes</h3>
+    <ul>
+      <li>label - reactive, optional attribute. Button text is rendered on a single line and will not wrap.</li>
+      <li>icon-leading and icon-trailing - reactive, optional attributes. Define the icon names displayed before and after the text.</li>
+      <li>height - static, optional attribute. Button height (number), default is 32, measured in pixels. (Recommended: 24 to 40). Even numbers are preferable.</li>
+      <li>disabled - reactive, optional attribute that controls the component's state (enabled/disabled).</li>
+    </ul>
+  </div>
 </section>
 
 <section class="content">
@@ -92,10 +102,10 @@
   <span>Text with icons on both sides.</span>
   <div class="example">
     <div class="preview">
-      <ui-button style="width:200px" icon-leading="gear" icon-trailing="gear" label="Button" height="60"></ui-button> 
+      <ui-button style="width:110px" icon-leading="gear" label="Button" height="60"></ui-button> 
     </div>
     <code>
-      <span>&lt;ui-button icon-leading="gear" icon-trailing="gear" label="Button"&gt;&lt;/ui-button&gt;</span>
+      <span>&lt;ui-button icon-leading="gear" label="Button"&gt;&lt;/ui-button&gt;</span>
     </code>
   </div>
 </section>
