--- a/pages/ui-divider.html
+++ b/pages/ui-divider.html
@@ -1,14 +1,23 @@
 <section class="intro">
-  <span class="title">Divider</span>
+  <h1>Divider</h1>
   <span class="description">A component for separating content using a line or a line with text.</span>
-  <ul>
-    <li>Supports LTR and RTL.</li>
-    <li>label - optional attribute, a continuous string.</li>
-    <li>axis - "x" or "y" (lowercase), defines the axis. Default is "x".</li>
-    <li>axis="x" - horizontal divider, 100% width.</li>
-    <li>axis="y" - vertical divider, 100% height.</li>
-    <li>text-align - text alignment: "start" or "end". Center by default.</li>
-  </ul>
+  <ui-divider></ui-divider>
+  <div class="info">
+    <h3>Features</h3>
+    <ul>
+      <li>Supports LTR and RTL.</li>
+    </ul>
+  </div>
+  <div class="info">
+    <h3>Attributes</h3>
+    <ul>
+      <li>label - optional attribute, a continuous string.</li>
+      <li>axis - defines the axis. Default is "x" (lowercase).</li>
+      <li>axis="x" - horizontal divider, 100% width.</li>
+      <li>axis="y" - vertical divider, 100% height.</li>
+      <li>text-align - text alignment: "start" or "end". Center by default.</li>
+    </ul>
+  </div>
 </section>
 
 <section class="content">
