--- a/pages/ui-icon.html
+++ b/pages/ui-icon.html
@@ -11,7 +11,7 @@
   <div class="info">
     <h3>Attributes</h3>
     <ul>
-      <li>icon - required and reactive attribute.</li>
+      <li>icon - reactive, required.</li>
     </ul>
   </div>
 </section>
