--- a/pages/ui-switch.html
+++ b/pages/ui-switch.html
@@ -1,9 +1,19 @@
 <section class="intro">
-  <span class="title">Switch</span>
+  <h1>Switch</h1>
   <span class="description">Switches provide a simple and user-friendly way to toggle between two states.</span>
-  <ul>
-    <li>Supports LTR and RTL.</li>
-  </ul>
+  <ui-divider></ui-divider>
+  <div class="info">
+    <h3>Features</h3>
+    <ul>
+      <li>Supports LTR and RTL.</li>
+    </ul>
+  </div>
+  <div class="info">
+    <h3>Attributes</h3>
+    <ul>
+      <li>icon - required and reactive attribute.</li>
+    </ul>
+  </div>
 </section>
 
 <section class="content">
